--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
             </ul>
         </div>
     </div>
-
+   <p> update</p>
     
     <section class="status-section">
         <div class="temp">
