Added Some Files
" In This Change I added some file where
I seems to need add the page and also change the normal heading verical to the horizontal"

--- a/home.html
+++ b/home.html
@@ -35,23 +35,22 @@
 
     <div class="bstauts">
         <div id="bh">
-           <h1 id="risk">N<br>O<br>R<br>M<br>A<br>L</h1>
+           <h1 id="risk">NORMAL</h1>
         </div>
         <div id="details">
             <p>Details :</p>
             <ul>
-                <li> Temperature : In Control</li>
-                <li> Electronics :- Working </li>
-                <li>Emergency Alarm :- Working</li>
-                <li>Moisture : In Control</li>
-                <li>Humidity : In Control</li>
-                <li>Emergency System: Working</li>
+                <a href="Temperature.html" class="login-button"><li>Temperature : In Control</li></a>
+                <a href="Alarm System.html" class="login-button"><li>Emergency Alarm :- Working</li></a>
+                <a href="Electronics.html" class="login-button"><li>Emergency System: Working</li></a>
+                <a href="#" class="login-button"><li>Moisture : In Control</li></a>
+                <a href="#" class="login-button"><li>Humidity : In Control</li></a>
             </ul>
         </div>
     </div>
-   <p> update</p>
     
     <section class="status-section">
+        <a href="Temperature.html" class="login-button">
         <div class="temp">
             <div class="thed">
             <h2 #id="thed">Temperature</h2>
@@ -114,6 +113,8 @@
             <h3>temp between 21% to 25%</h3>
             <p class="status normal">Normal</p>
         </div>
+    </a>
+    <a href="Electronics.html" class="login-button">
         <div class="ele">
             <div class="thed">
                 <h2 #id="thed">Electronics</h2>
@@ -122,6 +123,8 @@
             <h2>All Normal</h2>
             <h2>In All Section</h2>
         </div>
+    </a>
+        <a href="Alarm System.html" class="login-button">
         <div class="ala">
             <div class="thed">
                 <h2 #id="thed">Alarm System</h2>
@@ -130,6 +133,7 @@
             <h2>Problem At</h2>
             <h2>Sector S2</h2>
         </div>
+    </a>
     </section>
     <hr>
     <h1 id="prbo">Problem</h1>
